Semestral work: Added input handling

--- a/Aurorion/Makefile
+++ b/Aurorion/Makefile
@@ -1,6 +1,5 @@
 CC = g++
 CFLAGS = -Wall -c -pedantic -I/usr/include/libxml2
-LDFLAGS = -L/usr/local/lib -L/usr/lib
 LDLIBS = -lSDL2 -lSDL2_image -lxml2
 
 SOURCES := $(wildcard Sources/*.cpp)
@@ -11,7 +10,7 @@ EXECUTABLE = Aurorion
 all: $(SOURCES) $(EXECUTABLE)
 
 $(EXECUTABLE): $(OBJECTS)
-	$(CC) $(OBJECTS) $(LDFLAGS) $(LDLIBS) -o $@
+	$(CC) $(OBJECTS) $(LDLIBS) -o $@
 
 obj/%.o: Sources/%.cpp
 	$(CC) $(CFLAGS) $< -o $@
