Semestral work: Modified makefile to include libxml2

--- a/Aurorion/Makefile
+++ b/Aurorion/Makefile
@@ -1,6 +1,7 @@
 CC = g++
-CFLAGS = -Wall -c -pedantic -I/usr/include/libxml2
+CFLAGS = -Wall -c -g -pedantic
 LDLIBS = -lSDL2 -lSDL2_image -lxml2
+INCLUDES = -I/usr/include/libxml2
 
 SOURCES := $(wildcard Sources/*.cpp)
 OBJECTS := $(SOURCES:Sources/%.cpp=obj/%.o)
@@ -10,10 +11,10 @@ EXECUTABLE = Aurorion
 all: $(SOURCES) $(EXECUTABLE)
 
 $(EXECUTABLE): $(OBJECTS)
-	$(CC) $(OBJECTS) $(LDLIBS) -o $@
+	$(CC) $(OBJECTS) -o $@ $(LDLIBS)
 
 obj/%.o: Sources/%.cpp
-	$(CC) $(CFLAGS) $< -o $@
+	$(CC) $(CFLAGS) $(INCLUDES) $< -o $@
 
 clean:
 	rm -f obj/*.o $(EXECUTABLE)
