Semestral work: Change Makefile to locate libxml2, add c++ 14 standard

--- a/Aurorion/Makefile
+++ b/Aurorion/Makefile
@@ -1,10 +1,10 @@
 CC = g++
-CFLAGS = -Wall -c -g -pedantic
+CFLAGS = -Wall -std=c++14 -c -g -pedantic -O3
 LDLIBS = -lSDL2 -lSDL2_image -lxml2
-INCLUDES = -I/usr/include/libxml2
+INCLUDES = $(shell pkg-config --cflags libxml-2.0)
 
 SOURCES := $(wildcard Sources/*.cpp)
-OBJECTS := $(SOURCES:Sources/%.cpp=obj/%.o)
+OBJECTS := $(SOURCES:src/%.cpp=obj/%.o)
 
 EXECUTABLE = Aurorion
 
@@ -13,7 +13,7 @@ all: $(SOURCES) $(EXECUTABLE)
 $(EXECUTABLE): $(OBJECTS)
 	$(CC) $(OBJECTS) -o $@ $(LDLIBS)
 
-obj/%.o: Sources/%.cpp
+obj/%.o: src
 	$(CC) $(CFLAGS) $(INCLUDES) $< -o $@
 
 clean:
