Semestral work: Fix Makefile not loading .o files

--- a/Aurorion/Makefile
+++ b/Aurorion/Makefile
@@ -3,7 +3,7 @@ CFLAGS = -Wall -std=c++14 -c -g -pedantic -O3
 LDLIBS = -lSDL2 -lSDL2_image -lxml2
 INCLUDES = $(shell pkg-config --cflags libxml-2.0)
 
-SOURCES := $(wildcard Sources/*.cpp)
+SOURCES := $(wildcard src/*.cpp)
 OBJECTS := $(SOURCES:src/%.cpp=obj/%.o)
 
 EXECUTABLE = Aurorion
@@ -13,7 +13,7 @@ all: $(SOURCES) $(EXECUTABLE)
 $(EXECUTABLE): $(OBJECTS)
 	$(CC) $(OBJECTS) -o $@ $(LDLIBS)
 
-obj/%.o: src
+obj/%.o: src/%.cpp
 	$(CC) $(CFLAGS) $(INCLUDES) $< -o $@
 
 clean:
