Semestral work: Change Makefile to accept arguments and create dependencies

--- a/Aurorion/Makefile
+++ b/Aurorion/Makefile
@@ -1,5 +1,5 @@
 CC = g++
-CFLAGS = -Wall -std=c++14 -c -g -pedantic -O3
+CFLAGS = -Wall -std=c++17 -c -g -pedantic -O3
 LDLIBS = -lSDL2 -lSDL2_image -lxml2
 INCLUDES = $(shell pkg-config --cflags libxml-2.0)
 
@@ -20,4 +20,9 @@ clean:
 	rm -f obj/*.o $(EXECUTABLE)
 
 run: $(EXECUTABLE)
-	./$(EXECUTABLE)
+	./$(EXECUTABLE) $(MODE)
+
+deps:
+	$(CC) -MM $(SOURCES) > Makefile.d
+
+-include Makefile.d
